syntax updates